--- a/cape-in-town/src/components/OrderModel.css
+++ b/cape-in-town/src/components/OrderModel.css
@@ -49,6 +49,7 @@
   .food-image img {
     width: 100px;
     height: 100px;
+    max-width: 1000px;
     border-radius: 8px;
     object-fit: cover;
   }
