--- a/cape-in-town/src/pages/CategoryPage.css
+++ b/cape-in-town/src/pages/CategoryPage.css
@@ -65,7 +65,8 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        height: 160rem;
+        height: fit-content;
+        padding: 60px;
     }
     .food-list{
         display: grid;
@@ -85,5 +86,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        height: fit-content;
+        padding: 60px;
     }
 }
