--- a/cape-in-town/src/components/ShoppingCartDrawer.css
+++ b/cape-in-town/src/components/ShoppingCartDrawer.css
@@ -57,8 +57,24 @@
     .drawer {
       width: 100%;
     }
+    .cart-header {
+      padding: 0px;
+    }
   }
-  
+  @media (max-width: 480px) {
+    .cart-footer {
+      display: grid;
+      grid-template-rows: auto auto auto;
+      height: min-content;
+  }
+  .adress {
+    height: 100px;
+}
+.cart-header {
+  padding: 10px;
+}
+  }
+
   .cart-header {
     padding: 20px;
     border-bottom: 1px solid #ddd;
