--- a/cape-in-town/src/pages/CategoryPage.css
+++ b/cape-in-town/src/pages/CategoryPage.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url("../image/beton-bg.jpg");
+    background-image: url("../image/beton-bg.jpeg");
     background-size: cover;
 }
 
